# qcs

./: .gitignore  Manifest.toml  Project.toml  client.py  devlog.txt  gen_message.sh  load_data.py  loggerd.py  message.proto  message_pb.jl  pyclient.py  server.py
controllerd/: CMakeLists.txt
controllerd/proto/: message.pb.cc
controllerd/src/: controller.cpp
jetson/: LQR_gain.jld  LQR_gain2.jld  data_test.jl  ekf.jl  ekf_test.jl  init_robot.jl  interface.jl  load_data.jl  position_test.jl  proto_utils.jl  robot_reading_test.jl  twoLeg_balance.jl
jetson/tests/: alloc_test.jl  command_center.jl  daemon_test.jl  server.jl
julia_messaging/: Manifest.toml  Project.toml  julia_messaging.jl  message_pb.jl  messaging.jl
julia_messaging/script/: allocation_test.jl  messaging_test.jl  publishing_test.jl
julia_messaging/src/: julia_messaging.jl  messaging.jl
pymessaging/: logger.py  message_pb2.py  messaging.py  replay.py  server.py
tools/: client.py  load_data.py  load_motor.py  loggerd.py  plotter.py  server.py  server2.py
vicond/: CMakeLists.txt  message.pb.cc  message.pb.h
vicond/include/: ViconDriverZMQ.h
vicond/proto/: message.pb.cc  message.pb.h  message.proto
vicond/src/: ViconDriverZMQ.cpp  server.cpp
